--- a/src/app/insertitem/insertitem.component.html
+++ b/src/app/insertitem/insertitem.component.html
@@ -21,8 +21,8 @@
             </div>
             <div class="d-flex">
                 <button (click)="enviarDatos()">enviar</button>
-                <!-- <button (click)="modifyProduct()">enviar</button> -->
+                <button (click)="modifyProduct(codigo)">Modificar</button>
             </div>
         </div>
     </div>
-  </div>
+</div>
